objects/Resource__c/fields/MO_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>MO_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MO HW Permit</label>
    <type>Checkbox</type>
</CustomField>