objects/Resource__c/fields/MVR_Consent_Form__c.field-meta.xml
<CustomField>
    <fullName>MVR_Consent_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MVR Consent Form</label>
    <type>Checkbox</type>
</CustomField>