objects/Resource__c/fields/Navision_No__c.field-meta.xml
<CustomField>
    <fullName>Navision_No__c</fullName>
    <label>Navision No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>