objects/Resource__c/fields/ND_SW_Permit__c.field-meta.xml
<CustomField>
    <fullName>ND_SW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ND SW Permit</label>
    <type>Checkbox</type>
</CustomField>