objects/Resource__c/fields/Nested__c.field-meta.xml
<CustomField>
    <fullName>Nested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nested</label>
    <type>Checkbox</type>
</CustomField>