objects/Resource__c/fields/NJ_Amber_Light_Permit__c.field-meta.xml
<CustomField>
    <fullName>NJ_Amber_Light_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NJ Amber Light</label>
    <type>Checkbox</type>
</CustomField>