objects/Resource__c/fields/NJ_Decal__c.field-meta.xml
<CustomField>
    <fullName>NJ_Decal__c</fullName>
    <label>NJ HW Permit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>