objects/Resource__c/fields/NJ_Edgeboro__c.field-meta.xml
<CustomField>
    <fullName>NJ_Edgeboro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NJ-Edgeboro</label>
    <type>Checkbox</type>
</CustomField>