objects/Resource__c/fields/NJ_Hazardous_Decal_No__c.field-meta.xml
<CustomField>
    <fullName>NJ_Hazardous_Decal_No__c</fullName>
    <label>NJ Hazardous Decal No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>