objects/Resource__c/fields/NJ_HW_Category__c.field-meta.xml
<CustomField>
    <fullName>NJ_HW_Category__c</fullName>
    <label>NJ HW Category</label>
    <length>20</length>
    <type>Text</type>
</CustomField>