objects/Resource__c/fields/NJ_IFTA_Decal__c.field-meta.xml
<CustomField>
    <fullName>NJ_IFTA_Decal__c</fullName>
    <label>NJ IFTA Decal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>