objects/Resource__c/fields/NJ_Jurisdicition_Insp_Date__c.field-meta.xml
<CustomField>
    <fullName>NJ_Jurisdicition_Insp_Date__c</fullName>
    <label>NJ Jurisdicition Insp Date (Obsolete)</label>
    <type>Date</type>
</CustomField>