objects/Resource__c/fields/NJ_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>NJ_Jurisdiction__c</fullName>
    <label>NJ Jurisdiction (Obsolete)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>