objects/Resource__c/fields/NJ_PVSC__c.field-meta.xml
<CustomField>
    <fullName>NJ_PVSC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NJ-PVSC</label>
    <type>Checkbox</type>
</CustomField>