objects/Resource__c/fields/NJ_Solid_Decal_No__c.field-meta.xml
<CustomField>
    <fullName>NJ_Solid_Decal_No__c</fullName>
    <label>NJ Solid Decal No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>