objects/Resource__c/fields/NJ_SW_Category__c.field-meta.xml
<CustomField>
    <fullName>NJ_SW_Category__c</fullName>
    <label>NJ SW Category</label>
    <length>20</length>
    <type>Text</type>
</CustomField>