objects/Resource__c/fields/NJ_SW_Permit__c.field-meta.xml
<CustomField>
    <fullName>NJ_SW_Permit__c</fullName>
    <label>NJ SW Permit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>