objects/Resource__c/fields/NM_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>NM_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NM HW Permit</label>
    <type>Checkbox</type>
</CustomField>