objects/Resource__c/fields/Non_Payroll_Labor_Resource__c.field-meta.xml
<CustomField>
    <fullName>Non_Payroll_Labor_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Payroll Labor Resource</label>
    <type>Checkbox</type>
</CustomField>