objects/Resource__c/fields/NY_Fire_Decal__c.field-meta.xml
<CustomField>
    <fullName>NY_Fire_Decal__c</fullName>
    <label>NY Fire Decal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>