objects/Resource__c/fields/NY_Fire_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>NY_Fire_Exp_Date__c</fullName>
    <label>NY Fire Exp Date</label>
    <type>Date</type>
</CustomField>