objects/Resource__c/fields/NY_HUT_Decal__c.field-meta.xml
<CustomField>
    <fullName>NY_HUT_Decal__c</fullName>
    <label>NY HUT Decal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>