objects/Resource__c/fields/NY_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>NY_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NY HW Part 364 Permit</label>
    <type>Checkbox</type>
</CustomField>