objects/Resource__c/fields/NY_Westchester_SW__c.field-meta.xml
<CustomField>
    <fullName>NY_Westchester_SW__c</fullName>
    <label>NY- Westchester SW</label>
    <length>5</length>
    <type>Text</type>
</CustomField>