objects/Resource__c/fields/NYC_BIC_Trade_Waste__c.field-meta.xml
<CustomField>
    <fullName>NYC_BIC_Trade_Waste__c</fullName>
    <label>NYC BIC Trade Waste</label>
    <length>50</length>
    <type>Text</type>
</CustomField>