objects/Resource__c/fields/NYSE__c.field-meta.xml
<CustomField>
    <fullName>NYSE__c</fullName>
    <label>NYSE</label>
    <type>Date</type>
</CustomField>