objects/Resource__c/fields/OH_Brine__c.field-meta.xml
<CustomField>
    <fullName>OH_Brine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OH Brine</label>
    <type>Checkbox</type>
</CustomField>