objects/Resource__c/fields/OH_Permit__c.field-meta.xml
<CustomField>
    <fullName>OH_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alliance - MI, NV, OK, WV</label>
    <type>Checkbox</type>
</CustomField>