objects/Resource__c/fields/Ontario_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>Ontario_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ontario HW Permit</label>
    <type>Checkbox</type>
</CustomField>