objects/Resource__c/fields/Out_of_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Service_Date__c</fullName>
    <label>Out of Service Date</label>
    <type>Date</type>
</CustomField>