objects/Resource__c/fields/Out_of_Service_Reason__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Service_Reason__c</fullName>
    <label>Out of Service Reason</label>
    <type>TextArea</type>
</CustomField>