objects/Resource__c/fields/PA_Derry_WWTP__c.field-meta.xml
<CustomField>
    <fullName>PA_Derry_WWTP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PA Derry WWTP</label>
    <type>Checkbox</type>
</CustomField>