objects/Resource__c/fields/PA_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>PA_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PA HW Permit</label>
    <type>Checkbox</type>
</CustomField>