objects/Resource__c/fields/PA_Lehigh_WWTP__c.field-meta.xml
<CustomField>
    <fullName>PA_Lehigh_WWTP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PA Lehigh WWTP</label>
    <type>Checkbox</type>
</CustomField>