objects/Resource__c/fields/PA_Milton_WWTP__c.field-meta.xml
<CustomField>
    <fullName>PA_Milton_WWTP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PA Milton WWTP</label>
    <type>Checkbox</type>
</CustomField>