objects/Resource__c/fields/PA_Springettsbury_WWTP__c.field-meta.xml
<CustomField>
    <fullName>PA_Springettsbury_WWTP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PA Springettsbury WWTP</label>
    <type>Checkbox</type>
</CustomField>