objects/Resource__c/fields/PA_SW_Permit__c.field-meta.xml
<CustomField>
    <fullName>PA_SW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PA ACT 90 (SW)</label>
    <type>Checkbox</type>
</CustomField>