objects/Resource__c/fields/PA_Tire_Permit__c.field-meta.xml
<CustomField>
    <fullName>PA_Tire_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PA Tire Permit</label>
    <type>Checkbox</type>
</CustomField>