objects/Resource__c/fields/Pay_Rule__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Rule</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Pay_Rule__c.Type__c</field>
            <operation>equals</operation>
            <value>Union</value>
        </filterItems>
        <filterItems>
            <field>Pay_Rule__c.Blocked__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Pay_Rule__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>