objects/Resource__c/fields/Permits__c.field-meta.xml
<CustomField>
    <fullName>Permits__c</fullName>
    <label>Operating Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APV</fullName>
            </value>
            <value>
                <fullName>CVI</fullName>
            </value>
            <value>
                <fullName>ACV</fullName>
            </value>
            <value>
                <fullName>Ecoflo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>