objects/Resource__c/fields/Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Plate_Number__c</fullName>
    <label>License Plate</label>
    <length>80</length>
    <type>Text</type>
</CustomField>