objects/Resource__c/fields/Plate_State__c.field-meta.xml
<CustomField>
    <fullName>Plate_State__c</fullName>
    <label>Plate State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>