objects/Resource__c/fields/Platinum_ER_Rate4__c.field-meta.xml
<CustomField>
    <fullName>Platinum_ER_Rate4__c</fullName>
    <label>Platinum ER Rate4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>