objects/Resource__c/fields/Platinum_ER_Rate__c.field-meta.xml
<CustomField>
    <fullName>Platinum_ER_Rate__c</fullName>
    <label>Platinum ER Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>