objects/Resource__c/fields/Platinum_Rate3__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Rate3__c</fullName>
    <label>Platinum Rate3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>