objects/Resource__c/fields/Post_Sale_to_Own_GL_Acct_When_Bundled__c.field-meta.xml
<CustomField>
    <fullName>Post_Sale_to_Own_GL_Acct_When_Bundled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Sale to Own GL Acct. When Bundled</label>
    <type>Checkbox</type>
</CustomField>