objects/Resource__c/fields/Previous_Company__c.field-meta.xml
<CustomField>
    <fullName>Previous_Company__c</fullName>
    <label>Previous Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>