objects/Resource__c/fields/PTO__c.field-meta.xml
<CustomField>
    <fullName>PTO__c</fullName>
    <inlineHelpText>ACV funded employee Paid Time Off.</inlineHelpText>
    <label>PTO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>