objects/Resource__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <formula>IF(TEXT(Category__c) == 'Equipment', Start_Date__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>