objects/Resource__c/fields/Quebec_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>Quebec_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quebec HW Permit</label>
    <type>Checkbox</type>
</CustomField>