objects/Resource__c/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <label>Recruiter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECOFLO</fullName>
            </value>
            <value>
                <fullName>Eliry Rodriguez</fullName>
            </value>
            <value>
                <fullName>Katie Yutes</fullName>
            </value>
            <value>
                <fullName>Kelly Johnson</fullName>
            </value>
            <value>
                <fullName>Kerrie Hamilton</fullName>
            </value>
            <value>
                <fullName>Mike Gaudin</fullName>
            </value>
            <value>
                <fullName>Miriame Clemente</fullName>
            </value>
            <value>
                <fullName>Noah Scudere-Weiss</fullName>
            </value>
            <value>
                <fullName>Tomas Quinones</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Rehire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>