objects/Resource__c/fields/Reg_Date__c.field-meta.xml
<CustomField>
    <fullName>Reg_Date__c</fullName>
    <label>Reg Date (exp)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>