objects/Resource__c/fields/Registered__c.field-meta.xml
<CustomField>
    <fullName>Registered__c</fullName>
    <label>Registered By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACV</fullName>
            </value>
            <value>
                <fullName>APV</fullName>
            </value>
            <value>
                <fullName>CVI</fullName>
            </value>
            <value>
                <fullName>ENV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>