objects/Resource__c/fields/Rent_Company__c.field-meta.xml
<CustomField>
    <fullName>Rent_Company__c</fullName>
    <label>Rent Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>