objects/Resource__c/fields/Rental_Company__c.field-meta.xml
<CustomField>
    <fullName>Rental_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rental Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>