objects/Resource__c/fields/ReportField__c.field-meta.xml
<CustomField>
    <fullName>ReportField__c</fullName>
    <formula>AND(GVWNumber__c   &gt;= 55000,RecordType.Name = 'Equipment', ISBLANK(End_Date__c  ) )

||

AND(GVWNumber__c   &gt;= 55000,RecordType.Name = 'Equipment',  End_Date__c &gt;= DATE(2019, 01, 01))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReportField</label>
    <type>Checkbox</type>
</CustomField>