objects/Resource__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Type</label>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>