objects/Resource__c/fields/RI_HW_Decal__c.field-meta.xml
<CustomField>
    <fullName>RI_HW_Decal__c</fullName>
    <label>RI HW Permit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>