objects/Resource__c/fields/RI_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>RI_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RI HW Permit (Obsolete)</label>
    <type>Checkbox</type>
</CustomField>