objects/Resource__c/fields/RSG_EIN__c.field-meta.xml
<CustomField>
    <fullName>RSG_EIN__c</fullName>
    <externalId>true</externalId>
    <label>RSG EIN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>