objects/Resource__c/fields/Sales_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Sales_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>