objects/Resource__c/fields/Samsara_Certified__c.field-meta.xml
<CustomField>
    <fullName>Samsara_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Samsara Certified</label>
    <type>Checkbox</type>
</CustomField>