objects/Resource__c/fields/SC_Name__c.field-meta.xml
<CustomField>
    <fullName>SC_Name__c</fullName>
    <formula>Service_Center__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Name</label>
    <type>Text</type>
</CustomField>