objects/Resource__c/fields/Silver_ER_Rate3__c.field-meta.xml
<CustomField>
    <fullName>Silver_ER_Rate3__c</fullName>
    <label>Silver ER Rate3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>