objects/Resource__c/fields/Silver_Rate1__c.field-meta.xml
<CustomField>
    <fullName>Silver_Rate1__c</fullName>
    <label>Silver Rate1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>