objects/Resource__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Capacity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>