objects/Resource__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Out of Service</fullName>
                <label>OOS-On Lot</label>
            </value>
            <value>
                <fullName>OOS-Pending</fullName>
                <label>OOS-Pending Sale</label>
            </value>
            <value>
                <fullName>Gone</fullName>
            </value>
            <value>
                <fullName>Junked</fullName>
                <isActive>false</isActive>
                <label>Junked</label>
            </value>
            <value>
                <fullName>OOS-Under Repair</fullName>
                <isActive>false</isActive>
                <label>OOS-Under Repair</label>
            </value>
            <value>
                <fullName>Retired</fullName>
                <isActive>false</isActive>
                <label>Retired</label>
            </value>
            <value>
                <fullName>Returned</fullName>
                <isActive>false</isActive>
                <label>Returned</label>
            </value>
            <value>
                <fullName>Sold</fullName>
                <isActive>false</isActive>
                <label>Sold</label>
            </value>
            <value>
                <fullName>Stolen</fullName>
                <isActive>false</isActive>
                <label>Stolen</label>
            </value>
            <value>
                <fullName>Under Repair</fullName>
                <isActive>false</isActive>
                <label>Under Repair</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>