objects/Resource__c/fields/STD__c.field-meta.xml
<CustomField>
    <fullName>STD__c</fullName>
    <inlineHelpText>ACV paid short term disability insurance</inlineHelpText>
    <label>STD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>