objects/Resource__c/fields/Subcontractor_Company__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Company__c</fullName>
    <label>Subcontractor Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>