objects/Resource__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <label>Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>