objects/Resource__c/fields/Sync_d__c.field-meta.xml
<CustomField>
    <fullName>Sync_d__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync'd with PD</label>
    <type>Checkbox</type>
</CustomField>