objects/Resource__c/fields/Synced_with_Coupa__c.field-meta.xml
<CustomField>
    <fullName>Synced_with_Coupa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced with Coupa</label>
    <type>Checkbox</type>
</CustomField>