objects/Resource__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cert. Of Origin</fullName>
            </value>
            <value>
                <fullName>Have - CT</fullName>
            </value>
            <value>
                <fullName>Have - MA</fullName>
            </value>
            <value>
                <fullName>Have - NJ</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>RENTAL</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
            <value>
                <fullName>Have - NC</fullName>
            </value>
            <value>
                <fullName>Have - GA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>