objects/Resource__c/fields/Title_Comment__c.field-meta.xml
<CustomField>
    <fullName>Title_Comment__c</fullName>
    <label>Title Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>