objects/Resource__c/fields/Title_Owner__c.field-meta.xml
<CustomField>
    <fullName>Title_Owner__c</fullName>
    <label>Title Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACV Environmental Srvcs Inc.</fullName>
            </value>
            <value>
                <fullName>Allstate Power Vac</fullName>
            </value>
            <value>
                <fullName>Clean Venture Inc</fullName>
            </value>
            <value>
                <fullName>Cycle Chem</fullName>
            </value>
            <value>
                <fullName>ECOFLO Holdings</fullName>
            </value>
            <value>
                <fullName>ECOFLO Inc.</fullName>
            </value>
            <value>
                <fullName>ECOFLO Logistics</fullName>
            </value>
            <value>
                <fullName>Envirotech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>