objects/Resource__c/fields/TN_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>TN_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TN HW Permit</label>
    <type>Checkbox</type>
</CustomField>