objects/Resource__c/fields/TX_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>TX_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TX HW Permit</label>
    <type>Checkbox</type>
</CustomField>