objects/Resource__c/fields/Unit_Cost1__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost1__c</fullName>
    <label>Unit Cost1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>