objects/Resource__c/fields/Unit_of_Measure1__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measure1</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Resources (Unit of Measure1)</relationshipLabel>
    <relationshipName>Resources1</relationshipName>
    <type>Lookup</type>
</CustomField>