objects/Resource__c/fields/Unit_of_Measure3__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measure3</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Resources (Unit of Measure3)</relationshipLabel>
    <relationshipName>Resources3</relationshipName>
    <type>Lookup</type>
</CustomField>