objects/Resource__c/fields/Unladen_Weight__c.field-meta.xml
<CustomField>
    <fullName>Unladen_Weight__c</fullName>
    <label>Unladen Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>