objects/Resource__c/fields/Used_for_Contract__c.field-meta.xml
<CustomField>
    <fullName>Used_for_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Used for Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>