objects/Resource__c/fields/UserEmail__c.field-meta.xml
<CustomField>
    <fullName>UserEmail__c</fullName>
    <formula>User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserEmail</label>
    <type>Text</type>
</CustomField>