objects/Resource__c/fields/Vehicle_Year_Old__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Year_Old__c</fullName>
    <label>Vehicle Year Old</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>