objects/Resource__c/fields/Vendor_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Company_Name__c</fullName>
    <label>Vendor Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>