objects/Resource__c/fields/VT_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>VT_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VT HW Permit</label>
    <type>Checkbox</type>
</CustomField>