objects/Resource__c/fields/Westchester_Home_Improv__c.field-meta.xml
<CustomField>
    <fullName>Westchester_Home_Improv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Westchester Home Improv</label>
    <type>Checkbox</type>
</CustomField>