objects/Resource__c/fields/Westchester_Home_Improvement_Decal__c.field-meta.xml
<CustomField>
    <fullName>Westchester_Home_Improvement_Decal__c</fullName>
    <label>NY Westchester Home Improv</label>
    <length>250</length>
    <type>Text</type>
</CustomField>