objects/Resource__c/fields/WI_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>WI_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WI HW Permit</label>
    <type>Checkbox</type>
</CustomField>