objects/Resource__c/fields/WI_SW_Permit__c.field-meta.xml
<CustomField>
    <fullName>WI_SW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WI SW Permit</label>
    <type>Checkbox</type>
</CustomField>