objects/Resource__c/fields/X401K_Match_Pct__c.field-meta.xml
<CustomField>
    <fullName>X401K_Match_Pct__c</fullName>
    <inlineHelpText>ACV contribution to employee’s retirement savings plan based on the amount of employee’s contribution.</inlineHelpText>
    <label>401K Match %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>