objects/Resource__c/fields/xDiv_No__c.field-meta.xml
<CustomField>
    <fullName>xDiv_No__c</fullName>
    <label>xDiv No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>