objects/Resource__c/fields/xRSG_EIN__c.field-meta.xml
<CustomField>
    <fullName>xRSG_EIN__c</fullName>
    <label>xRSG EIN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>