objects/Resource__c/fields/xRSG_Id__c.field-meta.xml
<CustomField>
    <fullName>xRSG_Id__c</fullName>
    <label>xRSG Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>