objects/Resource__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <label>Waste Disposal</label>
</RecordType>