objects/Resource__c/recordTypes/Subcontractors.recordType-meta.xml
<RecordType>
    <fullName>Subcontractors</fullName>
    <active>true</active>
    <label>Subcontractors</label>
</RecordType>