objects/Resource__c/validationRules/Cannot_Change_Equipment_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Equipment_Group</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Equipment_Group__c),AND($Profile.Name != 'System Administrator', $Profile.Name != 'Purchase Order + Vehicle/Permit'))</errorConditionFormula>
    <errorDisplayField>Equipment_Group__c</errorDisplayField>
    <errorMessage>You do not have sufficient privileges to change Equipment Group.</errorMessage>
</ValidationRule>